--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 .project
-backstage/runtime/
-backstage/runtime/debug/
-backstage/web/assets/
+/backstage/runtime/
+/backstage/runtime/debug/
+/backstage/web/assets/
