--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 .project
 /backstage/config/db.php
 /reception/config/db.php
+/platform/config/db.php
 /backstage/runtime/
 /reception/runtime/
+/platform/runtime/
 /backstage/web/assets/
 /reception/web/assets/
+/platform/web/assets/
 .idea/workspace.xml
 .idea/vcs.xml
 .idea/en.iml
